--- a/index.htm
+++ b/index.htm
@@ -37,12 +37,28 @@
         });
     });
 </script>
+<style type="text/css">
+    .attrname
+    {
+        display: block;
+        width: 120px;
+    }
+    div.line
+    {
+        display:block; 
+        width: 360px; 
+        text-align: right; 
+        line-height: 120%;
+        vertical-align: middle;
+    }
+</style>
 </head>
 <body>
 <form>
 <h4> Web server is operational.</h4>
 <input type="button" value="click me get soap data" name="web" id="btnGetRequestSoapData" />
 <input type="button" value="click me call web service" name="web" id="btn" />
+<div style="display:block;"><div class="line"><span id="" class="attrname">attrname</span><input type="text" value="" name="" id="" /></div></div>
 </form>
 </body>
 </html>
