--- a/index.htm
+++ b/index.htm
@@ -14,8 +14,9 @@
                     type: "POST", //"GET",
                     url: "http://localhost:18083/",
                     contentType: "application/*",
-                    data: soap_req,
+                    data: soap_req.toString(),
                     success: function(result) {
+                        alert(soap_req);
                         alert(result);
                         $(result).find('result').each(function() {
                             alert($(this).text());
@@ -31,10 +32,32 @@
                     url: "http://localhost:18083/getsoapdata",
                     contentType: "application/soap",
                     success: function(result) {
-                        alert(result);
                         soap_req = result;
+                        key = 'this is key';
+                        soap_req = soap_req.replace('<key></key>', '<key>' + key + '</key>');
+                        val = 'this is value';
+                        soap_req = soap_req.replace('<value></value>', '<value>' + val + '</value>');
                         $('#btn').click();
                     }
+                });
+            });
+        });
+        var tbl;
+        $(document).ready(function() {
+            $('#btnGetTable').click(function () {
+                $(document.getElementById('config').rows).each(function () {
+                    input = $(this).append('<td><input type="button" value="modify" /></td>').find('input');
+                    input.click(function () {
+                        $('#btnGetRequestSoapData').click();
+                    });
+                    $(this).mouseover(function (event) {
+                                e = $(this).css('background-color', 'Aqua');
+                                e = event.toString();
+                            })
+                        .mouseout(function (event) {
+                                e = event.toString();
+                                $(this).css('background-color', 'transparent');
+                            });
                 });
             });
         });
@@ -45,6 +68,10 @@
         {
             display: block;
             width: 120px;
+        }
+        .mo
+        {
+        	background-color: Gray;
         }
         div.line
         {
@@ -70,6 +97,7 @@
         Web server is operational.</h4>
     <input type="button" value="click me get soap data" name="web" id="btnGetRequestSoapData" />
     <input type="button" value="click me call web service" name="web" id="btn" />
+    <label>this is a label.</label>
     <div class="line" style="display: block;">
         <% <table>
             <tr>
@@ -81,7 +109,9 @@
                 </td>
             </tr>
         </table>%>
-        <label>this is a label.</label>
+    </div>
+    <div>
+        <input type="button" value="click me get table" name="web" id="btnGetTable" />
     </div>
     </form>
 </body>
