--- a/index.htm
+++ b/index.htm
@@ -5,15 +5,16 @@
     <title>My name is gSoap Server Test.</title>
     <link rel="Stylesheet" type="text/css" media="screen" href="./main.css" />
 
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+    <script type="text/javascript" src="./jquery-latest.js"></script>
 
     <script type="text/javascript">
-        var soap_req;
+        var soap_req = "";
         $(document).ready(function() {
             $('#btn').click(function() {
+                $('#lblInfo').text("发送请求... ...");
                 jQuery.ajax({
                     type: "POST", //"GET",
-                    url: "http://localhost:18083/",
+                    url: document.URL,
                     contentType: "application/*",
                     data: soap_req.toString(),
                     success: function(result) {
@@ -22,54 +23,71 @@
                         $(result).find('result').each(function() {
                             alert($(this).text());
                         });
+                    },
+                    error: function(result) {
+                        $('#lblInfo').text($(result.responseXML).find('faultstring').text());
                     }
                 });
             });
         });
         $(document).ready(function() {
             $('#btnGetRequestSoapData').click(function() {
+                $('#lblInfo').text("发送请求...");
                 jQuery.ajax({
                     type: "GET", //"POST", 
-                    url: "http://localhost:18083/getsoapdata",
+                    url: document.URL + "getsoapdata",
                     contentType: "application/soap",
                     success: function(result) {
                         soap_req = result;
-                        key = 'this is key';
-                        soap_req = soap_req.replace('<key></key>', '<key>' + key + '</key>');
-                        val = 'this is value';
-                        soap_req = soap_req.replace('<value></value>', '<value>' + val + '</value>');
+                        soap_req = soap_req.replace('<key></key>', '<key>' + $('#txtKey').attr("value") + '</key>');
+                        soap_req = soap_req.replace('<value></value>', '<value>' + $('#txtVal').attr("value") + '</value>');
                         $('#btn').click();
                     }
                 });
             });
         });
-        var tbl;
         $(document).ready(function() {
-            $('#btnGetTable').click(function () {
-                $(document.getElementById('config').rows).each(function () {
-                    input = $(this).append('<td><input type="button" value="modify" /></td>').find('input');
-                    input.click(function () {
-                        $('#btnGetRequestSoapData').click();
+            $('#btnClose').click(function() {
+                $('#dialog').hide('slow');
+            });
+            $('#btnModify').click(function() {
+                //$('#btnClose').click();
+                $('#btnGetRequestSoapData').click();
+            });
+        });
+        $(document).ready(function() {
+            $('#btnGetTable').click(function() {
+                $(document.getElementById('config').rows).each(function() {
+                    input = $(this).append('<td><input type="button" value="modify" id="' + $(this).index() + '" /></td>').find('input');
+                    input.click(function() {
+                        t = (document.body.clientHeight - $('#dialog').height()) / 2;
+                        l = (document.body.clientWidth - $('#dialog').width()) / 2;
+                        if (t < 0) t = 0;
+                        if (l < 0) l = 0;
+                        k = $(document.getElementById('config').rows).get(this.id).cells[0];
+                        v = $(document.getElementById('config').rows).get(this.id).cells[2];
+                        $('#dialog').css({ position: "fixed", top: t, left: l });
+                        $('#dialog').show('slow', function() {
+                            $('#txtKey').attr("value", $(k).text());
+                            $('#txtVal').attr("value", $(v).text()).focus();
+                        });
+                        $('#lblInfo').text("");
                     });
-                    $(this).mouseover(function (event) {
-                                e = $(this).css('background-color', 'Aqua');
-                                e = event.toString();
-                            })
-                        .mouseout(function (event) {
-                                e = event.toString();
-                                $(this).css('background-color', 'transparent');
-                            });
+                    $(this).mouseover(function(event) {
+                        e = $(this).css('background-color', 'Aqua');
+                        e = event.toString();
+                    })
+                    .mouseout(function(event) {
+                        e = event.toString();
+                        $(this).css('background-color', 'transparent');
+                    });
                 });
             });
+            $('#btnGetTable').click();
         });
     </script>
 
     <style type="text/css">
-        .attrname
-        {
-            display: block;
-            width: 120px;
-        }
         .mo
         {
             background-color: Gray;
@@ -79,13 +97,25 @@
 <body>
     <div id="container">
         <div id="header">
-            <h2>WinCE Web Service ConfigFile Management</h2>
+            <h2>
+                WinCE Web Service ConfigFile Management</h2>
         </div>
         <div id="main">
             <form>
+            <div id="dialog" class="invisible">
+                <div style="margin: 16px auto; float: left;">
+                    <input type="text" value="" id="txtKey" />=<input type="text" value="" id="txtVal" />
+                </div>
+                <div style="margin: auto auto 16px auto; clear: left; float: left;">
+                    <input type="button" value="Modify" id="btnModify" /><input type="button" value="Close"
+                        id="btnClose" />
+                </div>
+                <label id="lblInfo"></label>
+            </div>
             <input type="hidden" value="click me get soap data" name="web" id="btnGetRequestSoapData" />
             <input type="hidden" value="click me call web service" name="web" id="btn" />
-            <div class="line"><% <table>
+            <div class="line">
+                <% <table>
             <tr>
                 <td>
                     <span id="" class="attrname">attrname</span>
@@ -95,13 +125,15 @@
                 </td>
             </tr></table>%>
             </div>
-            <div>
+            <div class="invisible">
                 <input type="button" value="click me get table" name="web" id="btnGetTable" />
             </div>
             </form>
         </div>
+        <hr />
         <div id="footer">
-        <label>email: taylorsaltfish@gmail.com 提供技术支持。</label>
+            <label style="text-decoration: underline;">
+                Email : taylorsaltfish@gmail.com 提供技术支持。</label>
         </div>
     </div>
 </body>
