add method getfilefullpath.fix the bug the css file isnot available beacause the MIME type is different from the file type, so the browser can't do right.

--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-<!--DOCTYPE HTML-->
+<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv='content-type' content='text/html; charset=gbk' />
@@ -6,7 +6,7 @@
     <title>My name is gSoap Server Test.</title>
     <link rel='stylesheet' type='text/css' href='./main.css' />
 
-    <script type='text/javascript' src='./jquery-latest.js'></script>
+    <script type='text/javascript' src='./jquery-1.4.4.min.js'></script>
     <script type='text/javascript' src='./main.js'></script>
 </head>
 <body>
