--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
     <title>My name is gSoap Server Test.</title>
     <link rel='stylesheet' type='text/css' href='./main.css' />
 
-    <script type='text/javascript' src='./jquery-1.4.4.min.js'></script>
+    <script type='text/javascript' src='http://code.jquery.com/jquery-latest.js'></script>
     <script type='text/javascript' src='./main.js'></script>
 </head>
 <body>
