when the config file is shorter than before, the bytes in the end of the file ain't removed.

--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
     <title>WinCE gSoap Web Server</title>
     <link rel="stylesheet" media="screen" type="text/css" href="./main.css" />
 
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+    <script type="text/javascript" src="./jquery-1.4.4.min.js"></script>
 
     <script type="text/javascript" src="./main.js"></script>
 
