the bug fixed: the config file is shorter than before, now it is truncated at the position of the new end of the file.

--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,7 @@
     <div id="container">
         <div id="header">
             <h2>
-                WinCE Web Service ConfigFile Management</h2>
+                WinCE Web Service ConfigFile Management System</h2>
             <div id="nav">
                 <ul>
                     <li><a href="./index.htm" title="Home"><span>Ê×Ò³</span></a></li></ul>
