DONE: according to the url[index.htm?*.ini] modify the different config file.

--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./main.js"></script>
 
     <style type="text/css">
-        h3
+        h2, h3
         {
             letter-spacing: 5px;
         }
@@ -21,10 +21,12 @@
     <div id="container">
         <div id="header">
             <h2>
-                WinCE Web Service ConfigFile Management System</h2>
+                WinCE Web Service 配置文件管理系统</h2>
             <div id="nav">
                 <ul>
-                    <li><a href="./index.htm" title="Home"><span>首页</span></a></li></ul>
+                    <li><a href="./index.htm" title="Home"><span>首页</span></a></li>
+                    <li><a href="./index.htm?aaa.ini" title="aaa.ini"><span>aaa.ini</span></a></li>
+                    <li><a href="./index.htm?bbb.ini" title="bbb.ini"><span>bbb.ini</span></a></li></ul>
             </div>
         </div>
         <div id="main">
