--- a/index.htm
+++ b/index.htm
@@ -25,8 +25,8 @@
             <div id="nav">
                 <ul>
                     <li><a href="./index.htm" title="Home"><span>Ê×Ò³</span></a></li>
-                    <li><a href="./index.htm?aaa.ini" title="aaa.ini"><span>aaa.ini</span></a></li>
-                    <li><a href="./index.htm?bbb.ini" title="bbb.ini"><span>bbb.ini</span></a></li></ul>
+                    <li><a href="./index.htm?file=/PocketMory1/aaa.ini" title="aaa.ini"><span>aaa.ini</span></a></li>
+                    <li><a href="./index.htm?file=/PocketMory1/bbb.ini" title="bbb.ini"><span>bbb.ini</span></a></li></ul>
             </div>
         </div>
         <div id="main">
