use version jquery 1.1.4, because the latest jquery file size is too large.

--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
     <title>WinCE gSoap Web Server</title>
     <link rel="stylesheet" media="screen" type="text/css" href="./main.css" />
 
-    <script type="text/javascript" src="./jquery-1.4.4.min.js"></script>
+    <script type="text/javascript" src="./jquery-1.1.4.js"></script>
 
     <script type="text/javascript" src="./main.js"></script>
 
@@ -40,7 +40,7 @@
                     <input type="text" value="" id="txtKey" />=<input type="text" value="" id="txtVal" />
                 </div>
                 <div class="bottom">
-                    <input type="button" value="Modify" id="btnModify" /><input type="button" value="Close"
+                    <input type="button" value="ÐÞ¸Ä" id="btnModify" /><input type="button" value="¹Ø±Õ"
                         id="btnClose" /></div>
                 <span id="lblInfo"></span>
             </div>
