--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
     <title>WinCE gSoap Web Server</title>
     <link rel="stylesheet" media="screen" type="text/css" href="./main.css" />
 
-    <script type="text/javascript" src="./jquery-1.1.4.js"></script>
+    <script type="text/javascript" src="./jquery-1.1.4.pack.js"></script>
 
     <script type="text/javascript" src="./main.js"></script>
 
